--- a/avg_prog.html
+++ b/avg_prog.html
@@ -12,13 +12,13 @@
 <script>
     
 // use var to define a new memory-cell (variable)
-var number1 = 5
-var number2 = 4
-// calc the sum in sum variable
-var sum = number1 + number2
-
-document.write(sum)
-
+var a, b, c, avg
+a = 8
+b = 400
+c = -150
+avg = (a + b + c) / 3
+document.write(avg)
+document.write("<h3> average of 8, -150, 400 is: " , avg, "</h3>")
 </script>
 
 </body>
