--- a/prog4.html
+++ b/prog4.html
@@ -12,13 +12,12 @@
 <script>
     
 // use var to define a new memory-cell (variable)
-var number1 = 5
-var number2 = 4
-// calc the sum in sum variable
-var sum = number1 + number2
-
-document.write(sum)
-
+var a, b, mul
+a = prompt("Please enter a number [a]: ")
+b = prompt("Please enter a number [b]: ")
+mul = a * b
+document.write(mul)
+document.write("<h3> multiply of: " , a, " * ", b, " = ", mul, "</h3>")
 </script>
 
 </body>
